@@ -12,6 +12,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Bug fix: on some systems find/replace comboboxes expanded too much in case of
   long patterns
 * Bug fix: SVN plugin log window - incorrect revision number based sorting
+* New feature: debug session button added to dump debug session settings
 
 2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
